--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <h1 id="clock">00:00:00</h1>
+    <div id=" main_div_block"><p id="clock">00:00:00</p>
+    <p id="ampm">AM</p> </div>
     <p id="color">#000000</p>
     <script src="js/main.js"></script>
 </body>
