--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <div>
+        <button id="colorBtnRed" onclick="changeColorRed()" >text color : RED</button> 
+        <button id="colorBtnWhite" onclick="changeColorWhite()" >text color : White</button>
+    </div>
     <div id=" main_div_block"><p id="clock">00:00:00</p>
     <p id="ampm">AM</p> </div>
     <p id="color">#000000</p>
